change base url to solve welfare API failure case

--- a/app/src/main/res/layout/activity_daily_detail.xml
+++ b/app/src/main/res/layout/activity_daily_detail.xml
@@ -23,30 +23,25 @@
   <http://www.gnu.org/philosophy/why-not-lgpl.html>.
 
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context="com.camnter.easygank.views.DailyDetailActivity">
 
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/coordinator_layout"
+    <include layout="@layout/include_toolbar" />
+
+    <com.camnter.easyrecyclerview.widget.EasyRecyclerView
+        android:id="@+id/daily_detail_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <include layout="@layout/include_toolbar"/>
+</android.support.design.widget.CoordinatorLayout>
 
-        <com.camnter.easyrecyclerview.widget.EasyRecyclerView
-            android:id="@+id/daily_detail_rv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-    </android.support.design.widget.CoordinatorLayout>
-
-</LinearLayout>
 
