Picture View support zoom and pan

--- a/app/src/main/res/layout/activity_picture.xml
+++ b/app/src/main/res/layout/activity_picture.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:gesture-image="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,19 +9,24 @@
 
     <include
         android:id="@+id/app_bar_layout"
-        layout="@layout/include_toolbar"/>
+        layout="@layout/include_toolbar" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/app_bar_layout">
 
-        <ImageView
+        <com.camnter.easygank.custom_view.gesture_imageview.GestureImageView
             android:id="@+id/picture_iv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+           />
 
     </RelativeLayout>
 
 </RelativeLayout>
+
+    <!--gesture-image:max-scale="10.0"-->
+    <!--gesture-image:min-scale="0.1"-->
+    <!--gesture-image:strict="false"-->
