--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -34,7 +34,8 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:navigationBarColor">@color/colorPrimary</item>
+
+        <!--<item name="android:navigationBarColor">@color/colorPrimary</item>-->
     </style>
 
     <style name="AppWindowTranslucentStatusTheme" parent="AppTheme">
